documentation and swagger partially fixed